// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookingCard Snapshot Stability should render consistently for cancelled booking 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderColor": "#D8E2DA",
      "borderRadius": 12,
      "borderWidth": 1,
      "elevation": 1,
      "padding": 16,
      "shadowColor": "#1F2A24",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.06,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "gap": 6,
        }
      }
    >
      <Text
        style={
          {
            "color": "#1A2520",
            "fontSize": 17,
            "fontWeight": "700",
          }
        }
      >
        Plumbing Service
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "borderRadius": 8,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "backgroundColor": "#F1F5F9",
            },
          ]
        }
      >
        <Ionicons
          color="#475569"
          name="close-circle-outline"
          size={14}
        />
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "600",
              },
              {
                "color": "#475569",
              },
            ]
          }
        >
          Cancelled
        </Text>
      </View>
    </View>
    <TouchableOpacity
      accessibilityLabel="Share booking"
      accessibilityRole="button"
      onPress={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#E9F1EB",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        }
      }
    >
      <Ionicons
        color="#4A5751"
        name="share-outline"
        size={18}
      />
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 14,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#1A2520",
          "borderRadius": 20,
          "height": 40,
          "justifyContent": "center",
          "marginRight": 12,
          "width": 40,
        }
      }
    >
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 15,
            "fontWeight": "700",
          }
        }
      >
        J
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#1A2520",
            "fontSize": 15,
            "fontWeight": "600",
            "marginBottom": 2,
          }
        }
      >
        John Doe
      </Text>
      <Text
        style={
          {
            "color": "#4A5751",
            "fontSize": 13,
          }
        }
      >
        123 Main St, City, State
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "gap": 6,
        "marginBottom": 14,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Ionicons
        color="#4A5751"
        name="calendar-outline"
        size={15}
      />
      <Text
        style={
          {
            "color": "#4A5751",
            "fontSize": 13,
          }
        }
      >
        March 15, 2024
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Ionicons
        color="#4A5751"
        name="time-outline"
        size={15}
      />
      <Text
        style={
          {
            "color": "#4A5751",
            "fontSize": 13,
          }
        }
      >
        10:00 AM
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Ionicons
        color="#4A5751"
        name="hourglass-outline"
        size={15}
      />
      <Text
        style={
          {
            "color": "#4A5751",
            "fontSize": 13,
          }
        }
      >
        2 hours
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
        }
      }
    >
      <Text
        style={
          {
            "color": "#768079",
            "fontSize": 11,
            "marginBottom": 2,
          }
        }
      >
        Total
      </Text>
      <Text
        style={
          {
            "color": "#1A2520",
            "fontSize": 20,
            "fontWeight": "700",
          }
        }
      >
        £
        150
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 2,
          }
        }
      >
        <Text
          style={
            {
              "color": "#1A2520",
              "fontSize": 13,
              "fontWeight": "600",
            }
          }
        >
          Details
        </Text>
        <Ionicons
          color="#768079"
          name="chevron-forward"
          size={14}
        />
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`BookingCard Snapshot Stability should render consistently for completed booking 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderColor": "#D8E2DA",
      "borderRadius": 12,
      "borderWidth": 1,
      "elevation": 1,
      "padding": 16,
      "shadowColor": "#1F2A24",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.06,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "gap": 6,
        }
      }
    >
      <Text
        style={
          {
            "color": "#1A2520",
            "fontSize": 17,
            "fontWeight": "700",
          }
        }
      >
        Plumbing Service
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "borderRadius": 8,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "backgroundColor": "#CCFBF1",
            },
          ]
        }
      >
        <Ionicons
          color="#0F766E"
          name="checkmark-circle-outline"
          size={14}
        />
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "600",
              },
              {
                "color": "#0F766E",
              },
            ]
          }
        >
          Completed
        </Text>
      </View>
    </View>
    <TouchableOpacity
      accessibilityLabel="Share booking"
      accessibilityRole="button"
      onPress={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#E9F1EB",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        }
      }
    >
      <Ionicons
        color="#4A5751"
        name="share-outline"
        size={18}
      />
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 14,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#1A2520",
          "borderRadius": 20,
          "height": 40,
          "justifyContent": "center",
          "marginRight": 12,
          "width": 40,
        }
      }
    >
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 15,
            "fontWeight": "700",
          }
        }
      >
        J
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#1A2520",
            "fontSize": 15,
            "fontWeight": "600",
            "marginBottom": 2,
          }
        }
      >
        John Doe
      </Text>
      <Text
        style={
          {
            "color": "#4A5751",
            "fontSize": 13,
          }
        }
      >
        123 Main St, City, State
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "gap": 6,
        "marginBottom": 14,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Ionicons
        color="#4A5751"
        name="calendar-outline"
        size={15}
      />
      <Text
        style={
          {
            "color": "#4A5751",
            "fontSize": 13,
          }
        }
      >
        March 15, 2024
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Ionicons
        color="#4A5751"
        name="time-outline"
        size={15}
      />
      <Text
        style={
          {
            "color": "#4A5751",
            "fontSize": 13,
          }
        }
      >
        10:00 AM
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Ionicons
        color="#4A5751"
        name="hourglass-outline"
        size={15}
      />
      <Text
        style={
          {
            "color": "#4A5751",
            "fontSize": 13,
          }
        }
      >
        2 hours
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
        }
      }
    >
      <Text
        style={
          {
            "color": "#768079",
            "fontSize": 11,
            "marginBottom": 2,
          }
        }
      >
        Total
      </Text>
      <Text
        style={
          {
            "color": "#1A2520",
            "fontSize": 20,
            "fontWeight": "700",
          }
        }
      >
        £
        150
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#E9F1EB",
            "borderRadius": 10,
            "flexDirection": "row",
            "gap": 4,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          }
        }
      >
        <Ionicons
          color="#E26B4F"
          name="star-outline"
          size={14}
        />
        <Text
          style={
            {
              "color": "#1A2520",
              "fontSize": 12,
              "fontWeight": "600",
            }
          }
        >
          Rate
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 2,
          }
        }
      >
        <Text
          style={
            {
              "color": "#1A2520",
              "fontSize": 13,
              "fontWeight": "600",
            }
          }
        >
          Details
        </Text>
        <Ionicons
          color="#768079"
          name="chevron-forward"
          size={14}
        />
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`BookingCard Snapshot Stability should render consistently for upcoming booking 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderColor": "#D8E2DA",
      "borderRadius": 12,
      "borderWidth": 1,
      "elevation": 1,
      "padding": 16,
      "shadowColor": "#1F2A24",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.06,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "gap": 6,
        }
      }
    >
      <Text
        style={
          {
            "color": "#1A2520",
            "fontSize": 17,
            "fontWeight": "700",
          }
        }
      >
        Plumbing Service
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "borderRadius": 8,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "backgroundColor": "#DBEAFE",
            },
          ]
        }
      >
        <Ionicons
          color="#1D4ED8"
          name="time-outline"
          size={14}
        />
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "600",
              },
              {
                "color": "#1D4ED8",
              },
            ]
          }
        >
          Upcoming
        </Text>
      </View>
    </View>
    <TouchableOpacity
      accessibilityLabel="Share booking"
      accessibilityRole="button"
      onPress={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#E9F1EB",
          "borderRadius": 18,
          "height": 36,
          "justifyContent": "center",
          "width": 36,
        }
      }
    >
      <Ionicons
        color="#4A5751"
        name="share-outline"
        size={18}
      />
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 14,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#1A2520",
          "borderRadius": 20,
          "height": 40,
          "justifyContent": "center",
          "marginRight": 12,
          "width": 40,
        }
      }
    >
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 15,
            "fontWeight": "700",
          }
        }
      >
        J
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#1A2520",
            "fontSize": 15,
            "fontWeight": "600",
            "marginBottom": 2,
          }
        }
      >
        John Doe
      </Text>
      <Text
        style={
          {
            "color": "#4A5751",
            "fontSize": 13,
          }
        }
      >
        123 Main St, City, State
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "gap": 6,
        "marginBottom": 14,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Ionicons
        color="#4A5751"
        name="calendar-outline"
        size={15}
      />
      <Text
        style={
          {
            "color": "#4A5751",
            "fontSize": 13,
          }
        }
      >
        March 15, 2024
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Ionicons
        color="#4A5751"
        name="time-outline"
        size={15}
      />
      <Text
        style={
          {
            "color": "#4A5751",
            "fontSize": 13,
          }
        }
      >
        10:00 AM
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Ionicons
        color="#4A5751"
        name="hourglass-outline"
        size={15}
      />
      <Text
        style={
          {
            "color": "#4A5751",
            "fontSize": 13,
          }
        }
      >
        2 hours
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
        }
      }
    >
      <Text
        style={
          {
            "color": "#768079",
            "fontSize": 11,
            "marginBottom": 2,
          }
        }
      >
        Total
      </Text>
      <Text
        style={
          {
            "color": "#1A2520",
            "fontSize": 20,
            "fontWeight": "700",
          }
        }
      >
        £
        150
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#E9F1EB",
            "borderRadius": 10,
            "flexDirection": "row",
            "gap": 4,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          }
        }
      >
        <Ionicons
          color="#4A5751"
          name="refresh-outline"
          size={14}
        />
        <Text
          style={
            {
              "color": "#1A2520",
              "fontSize": 12,
              "fontWeight": "600",
            }
          }
        >
          Reschedule
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#E9F1EB",
              "borderRadius": 10,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 12,
              "paddingVertical": 8,
            },
            {
              "backgroundColor": "#FEE2E2",
            },
          ]
        }
      >
        <Ionicons
          color="#8A2E1B"
          name="close-outline"
          size={14}
        />
        <Text
          style={
            [
              {
                "color": "#1A2520",
                "fontSize": 12,
                "fontWeight": "600",
              },
              {
                "color": "#8A2E1B",
              },
            ]
          }
        >
          Cancel
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 2,
          }
        }
      >
        <Text
          style={
            {
              "color": "#1A2520",
              "fontSize": 13,
              "fontWeight": "600",
            }
          }
        >
          Details
        </Text>
        <Ionicons
          color="#768079"
          name="chevron-forward"
          size={14}
        />
      </TouchableOpacity>
    </View>
  </View>
</View>
`;
